[package]
name = "rs-vulkan"
version = "0.1.0"
authors = ["zhangmingming <zhangmingming@doweidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = { git = "https://github.com/vulkano-rs/vulkano", branch = "master" }
vulkano-shaders = "0.13"
image = "0.21"
vulkano-win = "0.13"
winit = "0.10"

[patch.crates-io]
metal = { git = "https://github.com/gfx-rs/metal-rs", branch = "master" }